--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,11 @@
+:root {
+  --grays_color: #1f1f1f;
+  --gray_color: #f2f2f2;
+  --blue_color: hsl(214, 84%, 56%);
+  --black_color: #000000;
+  --whigt_color: #ffffff;
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -14,18 +22,358 @@
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
+  display: flex;
+  align-items: center;
+  position: relative;
+  background-color: var(--gray_color);
+}
+
+.logo_place_header {
+  position: absolute;
+  height: 32px;
+  width: 183px;
+  top: 30px;
+  left: 64px;
+  z-index: 3;
+}
+
+h1 {
+  font-size: 120px;
+  font-weight: bold;
+  margin: 0;
+}
+
+h2 {
+  font-size: 60px;
+  margin: 0;
+}
+
+.h4 {
+  margin: 0;
+}
+
+.header__title{
+  display: flex;
+  align-items: center;
+  width: 730px;
+  line-height: 96px;
+  margin: 0;
+  position: relative;
+  left: 64px;
+  z-index: 3;
+}
+
+.header__subtitle {
+  width: 388px;
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+  z-index: 3;
+}
+
+a {
+  color: var(--blue_color);
+  text-decoration: none;
+}
+
+.header__main-illustration {
+  width: 768px;
+  height: 608px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: var(--blue_color);
+  position: absolute;
+  top: 64px;
+  right: 0;
+  z-index: 1;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.description {
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  border: 1px solid var(--gray_color);
+}
+
+.two-columns {
+  display: flex;
+  justify-content: space-between;
+  align-self: center;
+  width: 80%;
+  min-height: 332px;
+  max-height: 352px;
+}
+
+.two-columns__brief {
+  width: 175px;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1.2;
+  color: var(--blue_color);
+  margin: 0;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+}
+
+.two-columns__span-accent {
+  margin: 30px 0;
+}
+
+span {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+}
+
+.digits {
+  margin: 100px auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid var(--gray_color);
+}
+
+.section-title {
+  width: 60%;
+  font-size: 60px;
+  font-weight: bold;
+  line-height: 1.15;
+  text-align: center;
+}
+
+.section-subtitle {
+  width: 60%;
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+  padding-top: 20px;
+  text-align: center;
+}
+
+.table {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  /* align-content: space-between; */
+}
+
+.tabl_svet_white {
+  width: 1100px;
+  height: 420px;
+}
+
+.table__cell {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+}
+
+.table__cell_svet {
+  width: 250px;
+  height: 150px;
+  margin-top: 60px;
+  margin-bottom: 0;
+}
+
+.table__heading {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 1.15px;
+  margin: 0;
+}
+
+.table__text {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1.2;
+  margin: 0;
+}
+
+.table__text_svet_top {
+  margin-top: 20px;
+}
+
+.feynman {
+  background-color: var(--gray_color);
+  position: relative;
+  height: 100vh;
+  min-height: 750px;
+  max-height: 850px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.feynman__title {
+  width: 648px;
+  line-height: 1.15;
+  text-align: center;
+  position: absolute;
+  top: 100px;
+  z-index: 2;
+}
+
+.feynman__subtitle {
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
+  text-align: center;
+  margin-top: 70px;
+  z-index: 2;
+}
+
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
+  z-index: 2;
+}
+
+.feynman__image {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 867px;
+  height: 637px;
+  z-index: 1;
+}
+
+.kaufman {
+  margin: 0 auto;
+  min-height: 877px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  background-color: var(--grays_color);
+  overflow: hidden;
+}
+
+.section-title_theme_dark {
+  margin-top: 90px;
+  color: var(--whigt_color);
+  z-index: 2;
+}
+
+.section-subtitle_theme_dark {
+  color: var(--whigt_color);
+  margin: 0;
+  z-index: 2;
+}
+
+.tabl_theme_dark {
+  width: 1100px;
+  height: 480px;
+  z-index: 2;
+}
+
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
+  color: var(--whigt_color);
   margin-right: 0;
   margin-top: 80px;
+}
+
+.table__text_theme_dakr {
+  margin-top: 20px;
+}
+
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  right: -210px;
+  z-index: 1;
+}
+
+.footer {
+  min-height: 350px;
+  position: relative;
+  background-color: var(--grays_color);
+}
+
+.footer__columns {
+  height: 350px;
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  padding: 60px 64px 40px 64px;
+}
+
+.footer__column {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+  justify-content: space-between;
+
+}
+
+.logo_place_footer {
+  width: 183px;
+  height: 35px;
+}
+
+.footer__author {
+  /* position: absolute;
+  left: 64px;
+  bottom: 18px; */
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+  color: var(--whigt_color);
+}
+
+.footer__column-heading {
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 30px;
+  color: var(--whigt_color);
+  margin: 0;
+}
+
+.footer__column-links {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 20px 0 16px 0;
+}
+
+.footer__column-link {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 30px;
+  text-decoration: none;
+  color: var(--whigt_color);
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
