--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,3 @@
-:root {
-  --grays_color: #1f1f1f;
-  --gray_color: #f2f2f2;
-  --blue_color: hsl(214, 84%, 56%);
-  --black_color: #000000;
-  --whigt_color: #ffffff;
-}
-
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -25,7 +17,7 @@
   display: flex;
   align-items: center;
   position: relative;
-  background-color: var(--gray_color);
+  background-color: #f2f2f2;
 }
 
 .logo_place_header {
@@ -37,29 +29,12 @@
   z-index: 3;
 }
 
-h1 {
-  font-size: 120px;
-  font-weight: bold;
-  margin: 0;
-}
-
-h2 {
-  font-size: 60px;
-  margin: 0;
-}
-
-.h4 {
-  margin: 0;
-}
-
 .header__title{
-  display: flex;
-  align-items: center;
   width: 730px;
+  font-size: 102px;
+  font-weight: bold;
   line-height: 96px;
-  margin: 0;
-  position: relative;
-  left: 64px;
+  margin: 0 0 0 64px;
   z-index: 3;
 }
 
@@ -71,11 +46,12 @@ h2 {
   font-size: 18px;
   font-weight: normal;
   line-height: 25px;
+  margin: 0;
   z-index: 3;
 }
 
-a {
-  color: var(--blue_color);
+.header__link {
+  color: #2f80ed;
   text-decoration: none;
 }
 
@@ -92,7 +68,7 @@ a {
 .header__square-pic {
   height: 568px;
   width: 568px;
-  background-color: var(--blue_color);
+  background-color: #2f80ed;
   position: absolute;
   top: 64px;
   right: 0;
@@ -100,10 +76,9 @@ a {
 }
 
 .description {
-  margin-top: 100px;
+  margin: 100px 0 0 0;
   display: flex;
   justify-content: center;
-  border: 1px solid var(--gray_color);
 }
 
 .two-columns {
@@ -111,8 +86,6 @@ a {
   justify-content: space-between;
   align-self: center;
   width: 80%;
-  min-height: 332px;
-  max-height: 352px;
 }
 
 .two-columns__brief {
@@ -120,7 +93,7 @@ a {
   font-size: 18px;
   font-weight: normal;
   line-height: 1.2;
-  color: var(--blue_color);
+  color: #2f80ed;
   margin: 0;
 }
 
@@ -130,13 +103,20 @@ a {
   font-size: 24px;
   font-weight: normal;
   line-height: 34px;
+  margin: 0;
+}
+
+
+.two-columns__paragraph:nth-of-type(1),
+.two-columns__paragraph:nth-of-type(2) {
+  margin: 0 0 30px 0;
+}
+
+.two-columns__paragraph:nth-of-type(3) {
+  margin: 0;
 }
 
 .two-columns__span-accent {
-  margin: 30px 0;
-}
-
-span {
   font-size: 24px;
   font-weight: bold;
   line-height: 34px;
@@ -148,7 +128,6 @@ span {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  border: 1px solid var(--gray_color);
 }
 
 .section-title {
@@ -157,6 +136,7 @@ span {
   font-weight: bold;
   line-height: 1.15;
   text-align: center;
+  margin: 0;
 }
 
 .section-subtitle {
@@ -166,31 +146,31 @@ span {
   line-height: 34px;
   padding-top: 20px;
   text-align: center;
+  margin: 0;
 }
 
 .table {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-  /* align-content: space-between; */
-}
-
-.tabl_svet_white {
   width: 1100px;
-  height: 420px;
+  margin: 0;
+  padding: 0;
+  list-style-type: 0;
 }
 
 .table__cell {
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
+  width: 250px;
+  margin: 60px 0 0 0;
 }
 
-.table__cell_svet {
-  width: 250px;
-  height: 150px;
-  margin-top: 60px;
-  margin-bottom: 0;
+.table__cell:nth-of-type(2n+1),
+.table__cell:nth-of-type(2),
+.table__cell:nth-of-type(6) {
+  margin-right: auto;
 }
 
 .table__heading {
@@ -204,32 +184,27 @@ span {
   font-size: 18px;
   font-weight: normal;
   line-height: 1.2;
-  margin: 0;
-}
-
-.table__text_svet_top {
-  margin-top: 20px;
+  margin: 20px 0 0 0;
 }
 
 .feynman {
-  background-color: var(--gray_color);
+  background-color: #f2f2f2;
   position: relative;
-  height: 100vh;
-  min-height: 750px;
-  max-height: 850px;
+  height: 890px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
 }
 
 .feynman__title {
   width: 648px;
+  font-size: 120px;
+  font-weight: bold;
   line-height: 1.15;
   text-align: center;
-  position: absolute;
-  top: 100px;
   z-index: 2;
+  margin: 100px 0 0 0;
 }
 
 .feynman__subtitle {
@@ -237,7 +212,7 @@ span {
   font-weight: normal;
   line-height: 51px;
   text-align: center;
-  margin-top: 70px;
+  margin: 70px 0 0 0;
   z-index: 2;
 }
 
@@ -248,6 +223,8 @@ span {
   font-size: 36px;
   font-weight: normal;
   line-height: 51px;
+  color: #2f80ed;
+  text-decoration: none;
   z-index: 2;
 }
 
@@ -262,65 +239,80 @@ span {
 
 .kaufman {
   margin: 0 auto;
-  min-height: 877px;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   position: relative;
-  background-color: var(--grays_color);
+  background-color: #1f1f1f;
   overflow: hidden;
 }
 
 .section-title_theme_dark {
-  margin-top: 90px;
-  color: var(--whigt_color);
+  margin: 90px 0 0 0;
+  color: white;
   z-index: 2;
 }
 
 .section-subtitle_theme_dark {
-  color: var(--whigt_color);
+  color: white;
   margin: 0;
   z-index: 2;
 }
 
-.tabl_theme_dark {
+.table_theme_dark {
   width: 1100px;
-  height: 480px;
   z-index: 2;
+  margin: 0 0 90px 0;
 }
 
 .table__cell_theme_dark {
   width: 200px;
-  color: var(--whigt_color);
-  margin-right: 0;
+  color: white;
   margin-top: 80px;
 }
+
+.table__cell_theme_dark:nth-of-type(1),
+.table__cell_theme_dark:nth-of-type(2),
+.table__cell_theme_dark:nth-of-type(3),
+.table__cell_theme_dark:nth-of-type(4),
+.table__cell_theme_dark:nth-of-type(6),
+.table__cell_theme_dark:nth-of-type(7),
+.table__cell_theme_dark:nth-of-type(8),
+.table__cell_theme_dark:nth-of-type(9) {
+  margin-right: auto;
+}
+
 
 .table__text_theme_dakr {
   margin-top: 20px;
 }
 
 .kaufman__triangle {
+  background-image: url("../images/kaufman-triangle.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
   width: 877px;
   height: 877px;
   position: absolute;
+  top: 0;
   right: -210px;
   z-index: 1;
 }
 
 .footer {
   min-height: 350px;
-  position: relative;
-  background-color: var(--grays_color);
+  display: flex;
+  justify-content: center;
+  background-color: #1f1f1f;
+  padding-top: 60px;
+  padding-bottom: 40px;
 }
 
 .footer__columns {
-  height: 350px;
   display: flex;
   justify-content: space-between;
   width: 90%;
-  padding: 60px 64px 40px 64px;
 }
 
 .footer__column {
@@ -340,20 +332,18 @@ span {
 }
 
 .footer__author {
-  /* position: absolute;
-  left: 64px;
-  bottom: 18px; */
   font-size: 18px;
   font-weight: normal;
   line-height: 25px;
-  color: var(--whigt_color);
+  color: white;
+  margin: 18px 0;
 }
 
 .footer__column-heading {
   font-size: 18px;
   font-weight: bold;
   line-height: 30px;
-  color: var(--whigt_color);
+  color: white;
   margin: 0;
 }
 
@@ -369,7 +359,7 @@ span {
   font-weight: normal;
   line-height: 30px;
   text-decoration: none;
-  color: var(--whigt_color);
+  color: white;
 }
 
 .footer__social-icon {
