--- a/styles/style.css
+++ b/styles/style.css
@@ -167,12 +167,6 @@
   margin: 60px 0 0 0;
 }
 
-.table__cell:nth-of-type(2n+1),
-.table__cell:nth-of-type(2),
-.table__cell:nth-of-type(6) {
-  margin-right: auto;
-}
-
 .table__heading {
   font-size: 24px;
   font-weight: bold;
@@ -190,7 +184,7 @@
 .feynman {
   background-color: #f2f2f2;
   position: relative;
-  height: 890px;
+  min-height: 890px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -272,18 +266,6 @@
   margin-top: 80px;
 }
 
-.table__cell_theme_dark:nth-of-type(1),
-.table__cell_theme_dark:nth-of-type(2),
-.table__cell_theme_dark:nth-of-type(3),
-.table__cell_theme_dark:nth-of-type(4),
-.table__cell_theme_dark:nth-of-type(6),
-.table__cell_theme_dark:nth-of-type(7),
-.table__cell_theme_dark:nth-of-type(8),
-.table__cell_theme_dark:nth-of-type(9) {
-  margin-right: auto;
-}
-
-
 .table__text_theme_dakr {
   margin-top: 20px;
 }
@@ -307,6 +289,7 @@
   background-color: #1f1f1f;
   padding-top: 60px;
   padding-bottom: 40px;
+  box-sizing: border-box;
 }
 
 .footer__columns {
