исправлены transition в ссылках

--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -4,9 +4,9 @@
   line-height: 30px;
   text-decoration: none;
   color: white;
+  transition: 2s;
 }
 
 .footer__column-link:hover{
   opacity: 0.5;
-  transform: ease 6s;
 }
