--- a/blocks/feynman/__link/feynman__link.css
+++ b/blocks/feynman/__link/feynman__link.css
@@ -8,10 +8,10 @@
   color: #2f80ed;
   text-decoration: none;
   z-index: 2;
+  transition: 2s;
 }
 
 
 .feynman__link:hover {
   opacity: 0.5;
-  transform: 6s;
 }
