--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,5 +1,7 @@
 .resources__logo-zone {
   margin: 80px 0 0 0;
+  padding: 0;
+  list-style-type: 0;
   width: 1100px;
   display: flex;
   align-items: center;
