--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,3 +1,9 @@
 .video__iframe:nth-of-type(1) {
   margin: 0 20px 0 0;
 }
+
+.video__iframe {
+  width: 515px;
+  height: 316px;
+  border: none;
+}
